--- a/index2.html
+++ b/index2.html
@@ -1,11 +1,18 @@
 <html>
-
-<head>
+  <head>
     <title>Go It Kursu</title>
-</head>
-
-<body>
+  </head>
+  <body>
     <h2>Merhaba GoIt</h2>
-</body>
-
+    <div>
+      <h3>ürün 1</h3>
+      <h4>ürün 1 içeriği</h4>
+      <h4>Fiyat: 100 $</h4>
+    </div>
+    <div>
+      <h5>ürün 2</h5>
+      <h6>ürün 2 içeriği</h6>
+      <h6>Fiyat: 200 $</h6>
+    </div>
+  </body>
 </html>
